--- a/HTML/index.html
+++ b/HTML/index.html
@@ -48,7 +48,7 @@ para crear la estructura HTML5 -->
     </head>
     <body>
         <h1>HyperText Markup Language</h1> <!-- Etiqueta de cabecera tamaño 1-->
-        <p>Esto es un texto</p> <!--Etiqueta de parrafo-->
+        <p>Esto es un parrafo</p> <!--Etiqueta de parrafo-->
 
     </body>
 </html>
