--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,7 +24,7 @@ para crear la estructura HTML5 -->
 	</section>
 </article>
 <aside>
-	contenido de no tanta relevancia en el sitio
+	contenido de no tanta relevancia en el sitio.
 </aside>
 <footer>
 	pie de pagina
